--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     "type": "java",
     "name": "Launch Main",
     "request": "launch",
-    "mainClass": "Problema1p1.Main",
-    "projectName": "AnaliseDeAlgoritmos-FURB",
+    "mainClass": "Problema3.Testes",
+    "projectName": "AnaliseDeAlgoritmos",
     "classPaths": ["${workspaceFolder}/out"]
 }
